tests/paczka1/fuzzy1/54241981.err
Error in line 4: N4iurHmrx S591 82,6
Error in line 1: TBAjpsP S470 5,2
Error in line 11: TBAjpsP S591 36,8
Error in line 16: N4iurHmrx A138 79,4
Error in line 13: mO1r2 S470 12,7
Error in line 20: okL A138 54,49
Error in line 19: dalml A199 48,4
Error in line 33: SrBOznP S470 99,6
